imporve the long table memory management make shift key same as ctrl + space to open/close fireinput add pref key to remember the encoding add japanese support add default preference setup (mainly for language interface)

--- a/content/fireinput/editor.html
+++ b/content/fireinput/editor.html
@@ -1105,7 +1105,7 @@
           </td>
           <td>
             <div class="textInput" style="width: 40px">
-             <input type="text" nofireinput="true" id="tableFormColField" class="textInputField" style="width: 40px" value="2" 
+             <input type="text" _no_cjk_input="true" id="tableFormColField" class="textInputField" style="width: 40px" value="2" 
               onkeypress="FireinputEditor.onEnter(event, function() { document.getElementById('tableFormRowField').focus();})"></input>
             </div>
           </td>
@@ -1114,7 +1114,7 @@
           </td>
           <td>
             <div class="textInput" style="width: 40px">
-             <input type="text" nofireinput="true" id="tableFormRowField" class="textInputField" style="width: 40px" value="2" 
+             <input type="text" _no_cjk_input="true" id="tableFormRowField" class="textInputField" style="width: 40px" value="2" 
               onkeypress="FireinputEditor.onEnter(event, FireinputEditor.confirmTableForm)"></input>
             </div>
           </td>
