sync the tree to latest 1.8 and beyond

--- a/content/fireinput/editor.html
+++ b/content/fireinput/editor.html
@@ -6,6 +6,7 @@
     <title>火输文本编辑器</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="chrome://fireinput/skin/editor.css" type="text/css"/>
+    <link rel="stylesheet" href="chrome://fireinput/skin/common.css" type="text/css"/>
     <script type="text/javascript" src="chrome://fireinput/content/constant.js"></script>
     <script type="text/javascript" src="chrome://fireinput/content/lib.js"></script>
     <script type="text/javascript" src="chrome://fireinput/content/stream.js"></script>
@@ -1101,7 +1102,7 @@
      <table cellspacing=0 cellpadding=0 border=0>
         <tr>
           <td>
-            <div class="textInputName">方格的行数：</div>
+            <div class="textInputName">方格的列数：</div>
           </td>
           <td>
             <div class="textInput" style="width: 40px">
@@ -1110,7 +1111,7 @@
             </div>
           </td>
           <td>
-            <div class="textInputName">&nbsp;列数：</div>
+            <div class="textInputName">&nbsp;行数：</div>
           </td>
           <td>
             <div class="textInput" style="width: 40px">
