--- a/content/fireinput/about.html
+++ b/content/fireinput/about.html
@@ -11,9 +11,9 @@
 <div id="main">
 
   <p style="margin-top: 10px; padding: 3px;">
-     <h1><a href="http://www.fireinput.com">火输(Fireinput) %FIREINPUT_VERSION% 版本</a></h1>
+     <h1><a href="http://www.fireinput.com">火输(Fireinput) %FIREINPUT_VERSION% 版本, 发布于 %FIREINPUT_BUILDATE%</a></h1>
      <span style="font-size: 16px;"><span style="font-weight: bold">火输(Fireinput)</span> 是一款集成于火狐(Mozilla Firefox)浏览器
-     中文拼音输入软件。她不仅集成了其他汉语拼音软件的优秀功能，针对日益流行的网络，还独创性的加入了适合上网冲浪的界面。
+     中文输入软件。她不仅集成了其他汉语拼音软件的优秀功能，针对日益流行的网络，还独创性的加入了适合上网冲浪的界面。
       除了输入中文外，她还可以直接让用户选择各种特殊符号，以及多彩多丽的网络图案。</span>
   </p>
 
