fix security releted issues

--- a/content/fireinput/editor.html
+++ b/content/fireinput/editor.html
@@ -1005,8 +1005,8 @@
       </div>
     </div>
     <div style="margin: 0px; padding: 0px;">
-       <iframe id="fireinputEditor" name="fireinputEditor" style="min-width: 795px; background-color: #FFFFFF"></iframe>
-       <iframe width="250" height="185" id="colorpalette" src="chrome://fireinput/content/color.html" style="display:none; z-index: 10; position: absolute;"></iframe>
+       <iframe type="content" id="fireinputEditor" name="fireinputEditor" style="min-width: 795px; background-color: #FFFFFF"></iframe>
+       <iframe type="content" width="250" height="185" id="colorpalette" src="chrome://fireinput/content/color.html" style="display:none; z-index: 10; position: absolute;"></iframe>
     </div>
   </div>
   
